src/objects/QPMS__Cause__c.object
<CustomObject>
    <description>This is a master object in Quality Central.</description>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Cause_Code__c</fullName>
        <label>Cause Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Cause_Description__c</fullName>
        <label>Cause Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Defect_Count__c</fullName>
        <label>Defect Count</label>
        <summaryForeignKey>QPMS__Defect_Cause__c.QPMS__Cause__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>CAPA</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cause</label>
    <listViews>
        <fullName>QPMS__All_Causes</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Type__c</columns>
        <columns>QPMS__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Causes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Cause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Causes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>QPMS__Type_Required_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( QPMS__Type__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>QPMS__Type__c</errorDisplayField>
        <errorMessage>Type is required</errorMessage>
    </validationRules>
</CustomObject>